[package]
name = "surf"
version = "2.0.0-alpha.6"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/surf"
documentation = "https://docs.rs/surf"
description = "Surf the web - HTTP client framework"
keywords = ["http", "client", "framework", "request", "async", "async-std"]
categories = ["web-programming", "web-programming::http-client"]
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>", 
    "dignifiedquire <me@dignifiedquire.com>",
    "Renée Kooi <renee@kooi.me>",
    "Jeremiah Senkpiel <fishrock123@rocketmail.com>"
]
readme = "README.md"
edition = "2018"

[features]
# when the default feature set is updated, verify that the `--features` flags in
# `.github/workflows/ci.yaml` are updated accordingly
default = ["curl-client", "middleware-logger", "encoding"]
h1-client = ["http-client/h1_client", "default-client"]
curl-client = ["http-client/curl_client", "once_cell", "default-client"]
wasm-client = ["http-client/wasm_client", "default-client"]
default-client = []
middleware-logger = []
# requires web-sys for TextDecoder on wasm
encoding = ["encoding_rs", "web-sys"]

[dependencies]
futures-util = { version = "0.3.5", features = ["io"] }
log = { version = "0.4.7", features = ["kv_unstable"] }
mime_guess = "2.0.3"
serde = "1.0.97"
serde_json = "1.0.40"
serde_urlencoded = "0.6.1"
url = "2.0.0"
http-client = { version = "6.0.0", default-features = false }
http-types = "2.0.0"
async-std = { version = "1.6.0", default-features = false, features = ["std"] }
async-trait = "0.1.36"
pin-project-lite = "0.1.1"
once_cell = { version = "1.4.1", optional = true }
cfg-if = "0.1.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# encoding
encoding_rs = { version = "0.8.20", optional = true }

# wasm-client
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.25"
optional = true
features = [
    "TextDecoder",
]

[dev-dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
femme = "1.1.0"
serde = { version = "1.0.97", features = ["derive"] }
mockito = "0.23.3"

[workspace]
members = [ "wasm-test" ]
