[package]
name = "surf"
version = "2.3.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/surf"
documentation = "https://docs.rs/surf"
description = "Surf the web - HTTP client framework"
keywords = ["http", "client", "framework", "request", "async"]
categories = ["web-programming", "web-programming::http-client"]
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
    "dignifiedquire <me@dignifiedquire.com>",
    "Renée Kooi <renee@kooi.me>",
    "Jeremiah Senkpiel <fishrock123@rocketmail.com>",
]
readme = "README.md"
edition = "2018"

[features]
# when the default feature set is updated, verify that the `--features` flags in
# `.github/workflows/ci.yaml` are updated accordingly
default = ["curl-client", "middleware-logger", "encoding"]
curl-client = ["http-client/curl_client", "once_cell", "default-client"]
h1-client = [
    "http-client/h1_client",
    "http-client/native-tls",
    "once_cell",
    "default-client",
    "async-native-tls",
]
h1-client-no-tls = [
    "http-client/h1_client",
    "once_cell",
    "default-client",
]
h1-client-rustls = [
    "http-client/h1_client",
    "http-client/rustls",
    "once_cell",
    "default-client",
    "rustls_crate",
]
hyper-client = [
    "http-client/hyper_client",
    "once_cell",
    "default-client",
    "async-std/tokio02",
]
wasm-client = [
    "http-client/wasm_client",
    "default-client",
    "getrandom/js",
    "web-sys",
]
default-client = []
middleware-logger = []
# requires web-sys for TextDecoder on wasm
encoding = ["encoding_rs", "web-sys"]

[dependencies]
futures-util = { version = "0.3.28", features = ["io"] }
log = { version = "0.4.17", features = ["kv_unstable"] }
mime_guess = "2.0.4"
serde = "1.0.163"
serde_json = "1.0.96"
http-client = { git = "https://github.com/expenses/http-client-patched", branch = "update-deps", default-features = false }
http-types = { git = "https://github.com/http-rs/http-types", rev = "ac5d645ce5294554b86ebd49233d3ec01665d1d7" }
async-std = { version = "1.12.0", default-features = false, features = ["std"] }
async-trait = "0.1.68"
pin-project-lite = "0.2.9"
once_cell = { version = "1.17.1", optional = true }
cfg-if = "1.0.0"
getrandom = "0.2.9"
encoding_rs = { version = "0.8.32", optional = true }
rustls_crate = { version = "0.18", optional = true, package = "rustls" }
async-native-tls = { version = "0.3.3", optional = true }

web-sys = { optional = true, version = "0.3.63", features = ["TextDecoder"] }


[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
femme = "1.3.0"
serde = { version = "1.0.163", features = ["derive"] }
mockito = "0.23.3"
tide = "0.16.0"

[workspace]
members = ["wasm-test"]
